syntax = "proto3";

package auth.v1;

option go_package = "codegen/api/protos/auth/v1;authv1";
option csharp_namespace = "Paw";

import "google/protobuf/empty.proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  optional string ref = 4;
}

message AccessTokenResponse {
  string token_type = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4; // ExpiresInSeconds
}

message ConfirmEmailRequest {
  string user_id = 1;
  int32 code = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string email = 1;
  int32 code = 2;
  string new_password = 3;
}

service AuthService {
  rpc Login (LoginRequest) returns (AccessTokenResponse) {}
  rpc Register (RegisterRequest) returns (AccessTokenResponse) {}
  rpc ConfirmEmail (ConfirmEmailRequest) returns (google.protobuf.Empty) {}
  rpc ForgotPassword (ForgotPasswordRequest) returns (google.protobuf.Empty) {}
  rpc ResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty) {}
}
